# DoraPulse

./: .env.example  .gitignore  README.md  action.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-doctor.lock.yml  ci-doctor.md  daily-qa.lock.yml  daily-qa.md  release.yml  test.yml
backend/: .env.example  .env.template  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
backend/auth/: auth.py
backend/common/: github_client.py
backend/data/: dora_metrics.xlsx
backend/metrics/: dora_metrics.py  export_to_excel.py
frontend/: .env.template  .eslintrc.json  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  TestComponent.jsx  index.jsx
frontend/src/pages/: Dashboard.jsx  Dashboard.jsx.tmp  Login.jsx
scripts/: dora_metrics_csv.py
